tests/rosetta/out/Smalltalk/bitmap-histogram.out
/workspace/mochi/tests/rosetta/out/Smalltalk/bitmap-histogram.st:4: parse error, expected '|' or identifier
